--- a/TP8-Sockets/package.json
+++ b/TP8-Sockets/package.json
@@ -2,6 +2,7 @@
   "name": "TP5",
   "version": "1.0.0",
   "dependencies": {
-    "express": "4.12.3"
+    "express": "4.12.3",
+    "socket.io": "1.3.5"
   }
 }
