--- a/TP12-CombineThemAll/package.json
+++ b/TP12-CombineThemAll/package.json
@@ -6,6 +6,7 @@
     "colors": "^1.0.3",
     "express": "4.12.3",
     "mongoose": "4.0.1",
+    "mongoose-auto-increment": "^4.0.0",
     "morgan": "^1.5.2"
   }
 }
